changed image structure

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="card-header bg-primary text-white">
                <div class="row">
                   <h1>Check Weather</h1>
-                  <img id="head-img" src="sun.svg" width="70px" height="70px">
+                  <img id="head-img" src="images/sun.svg" width="70px" height="70px">
                </div>
             </div>
             <div class="card-body">
@@ -26,7 +26,7 @@
                <br>
                <div class="row">
                   <div class="col-sm-12 text-center">
-                     <img id ="imgid" src="dark.jpg" width=20px height=20px>
+                     <img id ="imgid" src="images/dark.jpg" width=20px height=20px>
                      <h2 id="descid">Welcome !!</h2>
                   </div>
                </div>
